propertee-core/src/test/resources/tests/63_range_step_zero.expected
Runtime error: Runtime Error at line 2:4: Range step must be positive
