propertee-core/src/test/resources/tests/63_range_step_zero.tee
// 63_range_step_zero.pt
a = [1..5, 0]
